--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -36,3 +36,6 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 #mybatis
 mybatis.config-location=classpath:mybatis-config.xml
 mybatis.mapper-locations=classpath:mapper/*.xml
+
+#jwt oauth2.0
+jwt.token.secret.key=706b378afc424c6bb86a389021afef61
