--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,15 +5,17 @@ spring.mvc.pathmatch.matching-strategy=ant_path_matcher
 openai.user.token=
 #chatgpt keys
 openai.user.key=
+# disable of this version
 openai.user.keys=
-#chat????
-#?????????,?????????? ??5?
-chat.content.list.length=
-# ???????? ??512??
+#chat
+#chat gpt of Max Session rounds default 5
+chat.content.list.length=10
+#chat message max   length default 512
 chat.content.str.length=
-#??????token?? ??Token???????? ??512?token
-chat.content.token.length=
-#http ?????? ??http??
+#chatgpt usage of  token default 512
+chat.content.token.length=512
+chat.content.system.desc=\u4f60\u662f\u4e00\u4e2aAI\u52a9\u624b,\u6211\u9700\u8981\u4f60\u6a21\u62df\u4e00\u540d\u6e29\u67d4\u8d34\u5fc3\u7684\u5973\u670b\u53cb\u6765\u56de\u7b54\u6211\u7684\u95ee\u9898
+#http proxy
 feign.okhttp.enabled=true
 proxy.host=127.0.0.1
 proxy.port=8001
@@ -25,17 +27,13 @@ debug=true
 #
 #feign.client.config.default.connectTimeout=5000
 #feign.client.config.default.readTimeout=5000
-
-
 #JDBC
-spring.datasource.url= jdbc:mysql://localhost:3306/mygpt
+spring.datasource.url=jdbc:mysql://localhost:3306/mygpt
 spring.datasource.username=root
 spring.datasource.password=mysql_login
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-
 #mybatis
 mybatis.config-location=classpath:mybatis-config.xml
 mybatis.mapper-locations=classpath:mapper/*.xml
-
 #jwt oauth2.0
 jwt.token.secret.key=706b378afc424c6bb86a389021afef61
