增加删除会话接口

--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,4 +1,4 @@
-my.env=local
+my.env=prod
 server.port=8080
 spring.mvc.pathmatch.matching-strategy=ant_path_matcher
 #openAI properties
@@ -34,11 +34,14 @@ spring.datasource.username=root
 spring.datasource.password=mysql_login
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 #mybatis
-mybatis.configuration=classpath:mybatis-config.xml
+mybatis.config-location=classpath:mybatis-config.xml
 mybatis.mapper-locations=classpath:mapper/*.xml
 
 #mybatis-log
-#mybatis.check-config-location=true
-mybatis.configuration.log-impl=org.apache.ibatis.logging.stdout.StdOutImpl
+#mybatis.configuration.log-impl=org.apache.ibatis.logging.stdout.StdOutImpl
+logging.level.org.mybatis=info
+logging.charset.file=utf-8
+logging.file.name=gptJavaApi.log
+logging.file.path=/home/log/gptJavaApi
 #jwt oauth2.0
 jwt.token.secret.key=706b378afc424c6bb86a389021afef61
