redisConfig引入 修复swagger鉴权问题

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -30,8 +30,12 @@ debug=true
 #feign.client.config.default.readTimeout=5000
 #JDBC
 spring.datasource.url=jdbc:mysql://localhost:3306/mygpt
-spring.datasource.username=root
-spring.datasource.password=mysql_login
+spring.datasource.username=gpt_sys
+spring.datasource.password=gpt_sys_login
+
+#spring.datasource.url=jdbc:mysql://db4free.net:3306/mygpt_test
+#spring.datasource.username=db4free_gpt_sys
+#spring.datasource.password=db4free_gpt_sys_login
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 #mybatis
 mybatis.configuration=classpath:mybatis-config.xml
@@ -42,3 +46,17 @@ mybatis.mapper-locations=classpath:mapper/*.xml
 mybatis.configuration.log-impl=org.apache.ibatis.logging.stdout.StdOutImpl
 #jwt oauth2.0
 jwt.token.secret.key=706b378afc424c6bb86a389021afef61
+
+#redis and lettuce
+spring.redis.host=192.168.199.128
+spring.redis.port=6379
+spring.redis.password=root
+lettuc.spring.redis.host=${spring.redis.host}
+lettuc.spring.redis.port=${spring.redis.port}
+lettuc.spring.redis.password=${spring.redis.password}
+#connection pool manger
+spring.redis.timeout=5000
+spring.redis.lettuce.pool.max-idle=10
+spring.redis.lettuce.pool.min-idle=5
+spring.redis.lettuce.pool.max-wait=3000
+spring.redis.lettuce.shutdown-timeout=2000
