--- a/pom.xml
+++ b/pom.xml
@@ -81,11 +81,11 @@
             <artifactId>confundus-api</artifactId>
             <version>1.0.0</version>
         </dependency>
-        <dependency>
-            <groupId>com.github.plexpt</groupId>
-            <artifactId>chatgpt</artifactId>
-            <version>4.0.5</version>
-        </dependency>
+<!--        <dependency>-->
+<!--            <groupId>com.github.plexpt</groupId>-->
+<!--            <artifactId>chatgpt</artifactId>-->
+<!--            <version>4.0.5</version>-->
+<!--        </dependency>-->
         <dependency>
             <groupId>io.jsonwebtoken</groupId>
             <artifactId>jjwt</artifactId>
@@ -162,6 +162,17 @@
         <!--            <artifactId>spring-boot-starter-security</artifactId>-->
         <!--            <version>2.6.2</version>-->
         <!--        </dependency>-->
+
+<!--        redis操作集成-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-redis</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>io.lettuce</groupId>
+            <artifactId>lettuce-core</artifactId>
+        </dependency>
+
     </dependencies>
 
 
