--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,11 @@
 my.env=local
-server.port=8080
+server.port=3000
 spring.mvc.pathmatch.matching-strategy=ant_path_matcher
 #openAI properties
 #yours identityToken ,??
 openai.user.token=
 #chatgpt keys
-openai.user.key=
+openai.user.key=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
 # disable of this version
 openai.user.keys=
 #chat
@@ -17,7 +17,7 @@ chat.content.str.length=
 chat.content.token.length=512
 chat.content.system.desc=\u4f60\u662f\u4e00\u4e2aAI\u52a9\u624b,\u6211\u9700\u8981\u4f60\u6a21\u62df\u4e00\u540d\u6e29\u67d4\u8d34\u5fc3\u7684\u5973\u670b\u53cb\u6765\u56de\u7b54\u6211\u7684\u95ee\u9898
 #http proxy
-feign.okhttp.enabled=true
+feign.okhttp.enabled=false
 proxy.host=127.0.0.1
 proxy.port=8001
 proxy.username=
@@ -30,8 +30,8 @@ debug=true
 #feign.client.config.default.readTimeout=5000
 #JDBC
 spring.datasource.url=jdbc:mysql://localhost:3306/mygpt
-spring.datasource.username=gpt_sys
-spring.datasource.password=gpt_sys_login
+spring.datasource.username=gpt_mysql
+spring.datasource.password=gpt_mysql_login
 
 #spring.datasource.url=jdbc:mysql://db4free.net:3306/mygpt_test
 #spring.datasource.username=db4free_gpt_sys
@@ -60,3 +60,7 @@ spring.redis.lettuce.pool.max-idle=10
 spring.redis.lettuce.pool.min-idle=5
 spring.redis.lettuce.pool.max-wait=3000
 spring.redis.lettuce.shutdown-timeout=2000
+
+#wechatKey
+we.chat.key=3549000c5836482391abc62169cfa808
+we.chat.uid=1
