--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -64,3 +64,10 @@ spring.redis.lettuce.shutdown-timeout=2000
 #wechatKey
 we.chat.key=3549000c5836482391abc62169cfa808
 we.chat.uid=1
+
+
+#wechatferry
+#????????id
+chat.content.room.white.list=44385516018@chatroom,wxid_5ga60fg63wmb22
+#??????????wxId
+chat.content.sender.black.list=wxid_6lhivzqx6e7222
